--- a/app/views/carts/show.html.slim
+++ b/app/views/carts/show.html.slim
@@ -8,4 +8,8 @@
       = @cart.total_price 
     br
     hr
-
+    - if !current_user.nil?
+      center
+        = button_to 'Check Out', store_path, method: :get, class: 'check-out-image'
+    - else
+      | Please sign in to check out
