[r] Fix spelling mistake

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -11,7 +11,7 @@ Do you have questions, or need more information? Please feel free to contact us.
 
 <p> Your Information: </p>
 <p>
-  you full name: <%= @user.full_name %> <br/>
+  Your full name: <%= @user.full_name %> <br/>
   Phone number: <%= @user.phone %> <br/>
   Birthday: <%= @user.birthday %> <br/>
   Creation Date: <%= @user.creation_date %>
