--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -4,13 +4,13 @@ h2 Change your password
   = devise_error_messages!
   = f.hidden_field :reset_password_token
   .form-group
-    = f.label :password, "New password", class: "col-sm-3 control-label"
+    = f.label :password, 'New password', class: 'col-sm-3 control-label'
     .col-sm-9
-      = f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control"
+      = f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control'
   .form-group
-    = f.label :password_confirmation, "Confirm new password", class: "col-sm-3 control-label"
+    = f.label :password_confirmation, 'Confirm new password', class: 'col-sm-3 control-label'
     .col-sm-9
-      = f.password_field :password_confirmation, autofocus: true, autocomplete: "off", class: "form-control"
+      = f.password_field :password_confirmation, autofocus: true, autocomplete: 'off', class: 'form-control'
   center
-    div= f.submit "Change my password", class: "btn btn-primary"
-    = render "devise/shared/links"
+    div= f.submit 'Change my password', class: 'btn btn-primary'
+    = render 'devise/shared/links'
