--- a/app/views/devise/registrations/_success.html.slim
+++ b/app/views/devise/registrations/_success.html.slim
@@ -1,8 +1,8 @@
-#sign-up-success.modal.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
+#sign-up-success.modal.fade aria-hidden='true' aria-labelledby='myModalLabel' role='dialog' tabindex='-1'
   .modal-dialog
     .modal-content
       .modal-header
-        button.close aria-hidden="true" data-dismiss="modal" type="button"  &times;
+        button.close aria-hidden='true' data-dismiss='modal' type='button'  &times;
         h4.modal-title Sign up sucess
       .modal-body
       .modal-footer
