--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,5 +1,5 @@
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <%= link_to 'Forgot your password?', new_password_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
@@ -19,5 +19,5 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <hr>
   <h3>NOT A MEMBER?</h3>
-  <%= link_to image_tag("sign-up.png"), new_registration_path(resource_name) , 'data-toggle' => 'modal', 'data-target' => '#sign-up-modal', id: 'sign_up', class: "sign-up-button" %> <br/>
+  <%= link_to image_tag('sign-up.png'), new_registration_path(resource_name) , 'data-toggle' => 'modal', 'data-target' => '#sign-up-modal', id: 'sign_up', class: 'sign-up-button' %> <br/>
 <% end -%>
