--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
       .row
         .col-md-8
           = link_to image_tag('logo.png'), store_index_path
-          = render "search/search"
+          = render 'search/search'
         .col-md-4
           #right-panel
             p
