--- a/app/views/comments/_link.html.slim
+++ b/app/views/comments/_link.html.slim
@@ -1,4 +1,4 @@
-- if !current_user.nil?
+- if current_user
   = link_to 'ADD REVIEW', new_comment_path( book_id: @book.id), 'data-toggle' => 'modal', 'data-target' => '#add-review-modal', id: 'add-review'
 - else
   | Please sign in to add a review
