--- a/app/views/line_items/_list.html.slim
+++ b/app/views/line_items/_list.html.slim
@@ -8,7 +8,9 @@
       #price.col-md-2
         = line_item.book.unit_price
       .col-md-1
-        = text_field_tag :quantity, nil, value: line_item.quantity, class: 'quantity'
+        = form_for(line_item, method: :put) do |f|
+          = f.hidden_field :id, value: line_item.id
+          = f.text_field :quantity, value: line_item.quantity, class: 'quantity'
       .col-md-1
         = image_tag '../assets/delete.png'
     hr
