[r] Show notice if cart is empty

--- a/app/views/carts/show.html.slim
+++ b/app/views/carts/show.html.slim
@@ -1,11 +1,13 @@
 .cart
-  - if !@cart.line_items.nil?
+  - if @cart.line_items.empty?
+    | Empty Cart
+  -else
     = render 'line_items/list'
     .col-md-6
       center
         | Total
     #total-price.col-md-6
-      = @cart.total_price 
+      = @cart.total_price
     br
     hr
     - if !current_user.nil?
@@ -13,3 +15,4 @@
         = button_to 'Check Out', store_path, method: :get, class: 'check-out-image'
     - else
       | Please sign in to check out
+
