--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -340,3 +340,15 @@
 .pagination{
   float: right;
 }
+
+#new_order{
+
+  .proceed-image{
+    margin-top: 10px;
+    color:transparent;
+    width: 120px;
+    height: 40px;
+    border: 0px;
+    background-image: image-url('proceed.png');
+  }
+}
