--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -13,7 +13,7 @@ h1 Listing books
             = image_tag 'no-star.png', class: 'star'
         p
           div.book-price
-            = link_to book.unit_price, line_items_path(book_id: book.id), method: :post
+            = link_to book.unit_price, line_items_path(book_id: book.id), method: :post, remote: true
 
 br
 .row
