--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -13,7 +13,7 @@
           | Price:
         dd
           div.book-price
-            = link_to @book.unit_price, line_items_path(book_id: @book.id), method: :post
+            = link_to @book.unit_price, line_items_path(book_id: @book.id), method: :post, remote: true
         dt.rate
           | Rate:
         dd
