--- a/app/views/line_items/_cart_link.html.slim
+++ b/app/views/line_items/_cart_link.html.slim
@@ -1,2 +1,2 @@
--if !session[:cart_code].nil?
+-if session[:cart_code].present?
   = link_to image_tag('cart.png'), cart_path(id: session[:cart_code]), class: 'cart-image', id: 'CART'
