[r] Apply css to show post order

--- a/app/assets/stylesheets/order.css.scss
+++ b/app/assets/stylesheets/order.css.scss
@@ -24,3 +24,15 @@
     background: black;
   }
 }
+
+#custom-collapse{
+
+  #panel-heading{
+    padding: 10px 15px;
+    background-color: white;
+  }
+
+  h4{
+    color: #3398B3;
+  }
+}
