--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -21,4 +21,13 @@
                   = line_item.quantity
                 br
             hr
+            .col-md-7
+              center
+                | Total
+            #total.col-md-3
+              = order.total_price
+            .col-md-2
+              = order.total_books
+
+
 
