--- a/app/assets/stylesheets/show_book.css.scss
+++ b/app/assets/stylesheets/show_book.css.scss
@@ -1,4 +1,28 @@
 .book-show{
+
+  .sharer-0 label {
+    background: #E98D23;
+    color: white;
+  }
+
+  .sharer-0 .social.networks-4.center {
+    margin-left: 0px;
+  }
+
+  .sharer-0 .social ul li{
+    width: 30px;
+    height: 28px;
+    padding: 0px;
+  }
+
+  .sharer-0 .social.top{
+    margin-top: -53px;
+  }
+
+  #share-link{
+    margin-top: 20px;
+  }
+
   .price-image{
     background-image: image-url('buy-book.png');
     width: 121px;
