--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -3,8 +3,7 @@
     .col-md-2
       = image_tag @book.image_url, class: 'book-image'
     .col-md-8
-      h3 = @book.title
-
+      h3 = @book.title 
       dl.dl-horizontal
         dt
           | By:
@@ -20,6 +19,7 @@
           - @book.total_rating_value.times
             = image_tag 'star.png', class: 'star'
           | (#{@book.total_rating_count})
+        div#share-link          
   hr
   div.details
     .col-md-2
