[r] Edit name of get all categories names method

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -38,7 +38,7 @@
       = @book.published_date
       br
       |Categories:
-      = @book.get_all_categories
+      = @book.category_names
   hr
   div.details
     .col-md-2
