--- a/app/views/search/_search.html.slim
+++ b/app/views/search/_search.html.slim
@@ -1,6 +1,6 @@
 #searchpanel
   = form_tag search_index_path, method: :get do
     .btn-group
-      = select_tag :category_id, options_from_collection_for_select(@categories, 'id' , 'name', selected: params[:category_id]), prompt: 'All categories', class: 'form-control'
+      = select_tag :category_id, options_for_select(@categories, params[:category_id]), prompt: 'All categories', class: 'form-control'
     = text_field_tag :q, nil, placeholder: 'Enter search term...', class: 'search', value: params[:q]
     button type='submit' Go
