[r] SEO - Add meta tags, titles for each pages

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,3 +1,5 @@
+- provide(:title, 'In Betweener Book Store - Buy Books, Books Prices')
+- provide(:page_name, 'INDEX')
 h1 Listing books
 - @books_data[:paginated_data].each do |book|
   .col-sm-6.col-md-4
