--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -1,3 +1,5 @@
+- provide(:title, "In Betweener books - Post Order, Buy Books")
+- provide(:page_name, "Post Orders")
 .order
   - if @orders.empty?
     | You dont have any order
