--- a/app/views/orders/new.html.slim
+++ b/app/views/orders/new.html.slim
@@ -1,3 +1,5 @@
+- provide(:title, "In Betweener books - Order Books, Buy Books")
+- provide(:page_name, "New Orders")
 .order
   hr
   h3 SHIPPING ADDRESS
