--- a/app/views/line_items/_list.html.slim
+++ b/app/views/line_items/_list.html.slim
@@ -12,5 +12,5 @@
           = f.hidden_field :id, value: line_item.id
           = f.text_field :quantity, value: line_item.quantity, class: 'quantity'
       .col-md-1
-        = link_to image_tag('delete.png'),line_item, method: :delete, id: 'delete', data: { confirm: 'Are you sure you want to delete this line item?' }
+        = link_to image_tag('delete.png'),line_item, method: :delete, noindex: true, id: 'delete', data: { confirm: 'Are you sure you want to delete this line item?' }
     hr
