--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -87,6 +87,29 @@
     color: #BDE5ED;
   }
 
+  #total-books{
+    display: inline;
+    padding-right: 5px;
+    padding-left: 5px;
+    vertical-align: top;
+    background: #EDAA5A;
+    color: white;
+    -webkit-border-radius: 50%;
+    margin-right: -60px;
+    position: relative;
+  }
+
+  .cart{
+    display: inline;
+    vertical-align: baseline;
+    padding-left: 10px;
+  }
+
+  .cart-image{
+    padding-left: 23px;
+    padding-right: 9px;
+  }
+
   p{
     display: inline;
     padding-right: 10px;
@@ -356,11 +379,6 @@
 }
 
 .user-image{
-  padding-left: 9px;
-  padding-right: 9px;
-}
-
-.cart-image{
   padding-left: 9px;
   padding-right: 9px;
 }
