--- a/app/views/line_items/_cart_link.html.slim
+++ b/app/views/line_items/_cart_link.html.slim
@@ -1,2 +1,5 @@
 -if session[:cart_code].present?
-  = link_to image_tag('cart.png'), cart_path(id: session[:cart_code]), class: 'cart-image', id: 'CART'
+  div.cart
+    #total-books
+      = Cart.find_by_code(session[:cart_code]).total_books
+    = link_to image_tag('cart.png'), cart_path(id: session[:cart_code]), class: 'cart-image', id: 'CART'
