--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -421,3 +421,16 @@
   border-right: 5px solid transparent;
   border-bottom: 8px solid #BDE5ED;
 }
+
+#custom-close{
+  opacity: 1;
+  background: white;
+  height: 25px;
+  width: 25px;
+  -webkit-border-radius: 50%;
+  margin-top: -10px;
+  margin-right: -10px;
+  color: #3398B3;
+  border-color: #3398B3;
+  vertical-align: middle;
+}
