[r] Change to use div instead of p in layout

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -110,8 +110,8 @@
     padding-right: 9px;
   }
 
-  p{
-    display: inline;
+  div{
+    display: -webkit-inline-box;
     padding-right: 10px;
     vertical-align: baseline;
   }
