--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,9 +18,9 @@ html
           = render 'search/search'
         .col-md-4
           #right-panel
-            p
+            div
               = render 'search/browse_category'
-            p
+            div.cart-render
               = render 'line_items/cart_link'
             = render 'devise/sessions/sessions'
       .page-name-row
