--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,3 +1,3 @@
 $('.notice').html('<%= flash[:notice] %>')
-$('.cart').html('<%= j(render('cart_link')) %>')
+$('.cart-render').html('<%= j(render('cart_link')) %>')
 
