[r] Insert css for browse dropbox

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -91,6 +91,10 @@
     margin-bottom: 0px;
   }
 
+  .browse-text{
+    padding-top: 10px;
+  }
+
   a{
     padding-top: 3px;
     font: normal 17px "Roboto medium";
