--- a/app/views/search/_browse_category.html.slim
+++ b/app/views/search/_browse_category.html.slim
@@ -1,6 +1,6 @@
 p#browse_categories
   .dropdown
-    .browse.visible-lg data-toggle='dropdown'
+    .browse-text.visible-lg data-toggle='dropdown'
       | BROWSE
     .browse.hidden-lg data-toggle='dropdown'
       = image_tag 'browse.png', class: 'browse-image'
