--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -2,20 +2,20 @@
 - provide(:page_name, 'INDEX')
 h1 Listing books
 - @books_data[:paginated_data].each do |book|
-  .col-sm-6.col-md-4
-    .thumbnail
-      = image_tag(book.image_url)
-      .caption
-        h4 = link_to book.title, book
-        p Author: #{book.author_name}
-        p
-          - book.rating_average.times
-            = image_tag 'star.png', class: 'star'
-          - if book.total_rating_value == 0
-            = image_tag 'no-star.png', class: 'star'
-        p
-          div.book-price
-            = link_to book.unit_price, line_items_path(book_id: book.id), method: :post, remote: true
+    .col-sm-6.col-md-4.col-xs-12
+      .thumbnail
+        = image_tag(book.image_url)
+        .caption
+          h4 = link_to book.title, book
+          p Author: #{book.author_name}
+          p
+            - book.rating_average.times
+              = image_tag 'star.png', class: 'star'
+            - if book.total_rating_value == 0
+              = image_tag 'no-star.png', class: 'star'
+          p
+            div.book-price
+              = link_to book.unit_price, line_items_path(book_id: book.id), method: :post, remote: true
 
 br
 .row
