[r] Optimize css loading

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,7 @@ html
     meta charset="UTF-8"
     meta name="description" content=('In Betweener Book Store provides a large selection of books and categories. We can buy books and pay through cash or credit card. Moreover, users can comment and rate for books')
     meta name="description" content=('Book Store, Buy Books, Books Description')
-    = stylesheet_link_tag    'application', media: 'all'
+    style= Rails.application.assets.find_asset('application.css').to_s.html_safe
     = csrf_meta_tags
   body
     .header
