[r] Add social share button

--- a/app/assets/stylesheets/show_book.css.scss
+++ b/app/assets/stylesheets/show_book.css.scss
@@ -1,30 +1,7 @@
 .book-show{
 
-  .sharer-0 label {
-    background: #E98D23;
-    color: white;
-  }
-
-  .sharer-0 .social.networks-4.center {
-    margin-left: 0px;
-  }
-
-  .sharer-0 .social ul li{
-    width: 30px;
-    height: 28px;
-    padding: 0px;
-  }
-
-  .sharer-0 .social.top{
-    margin-top: -53px;
-  }
-
-  #share-link{
-    margin-top: 4%;
-  }
-
-  #share-link-sx{
-
+  .shareable{
+    padding-top: 8px;
   }
 
   .price-image{
